<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="E_ControlMode" Id="{3b58936f-b613-4505-b7df-db49247d1447}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ControlMode :
(
	Off, 				(*0*)
	Init, 				(*1*)
	OperationTest, 		(*2*)
	Auto, 				(*3*)
	Manual,				(*4*)
	ExternalADSControl	(*5*)
);
END_TYPE



]]></Declaration>
  </DUT>
</TcPlcObject>